--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {
     letter-spacing: .02em;
     line-height: 115%;
     color: white;
-    background-color: #2382c4;
+    background-color: 358DCD;
+    background-image: linear-gradient(-90deg, #12629D,#358DCD);
     text-align: center;
     margin: 0 15vw;
 }
